2003-01-15  Werner Koch  <wk@gnupg.org>

	* longlong.h: Removed some spaces between backslashes and newlines.

2002-09-20  Werner Koch  <wk@gnupg.org>

	* mpi-mul.c (gcry_mpi_mul_2exp): New. This was declared in
	gcrypt.h but only implemented as internal function.  Noted by Timo
	but a few minutes to late for today's release.

	* Makefile.am (DISTCLEANFILES): Include mpi-asm-defs.h

2002-09-18  Werner Koch  <wk@gnupg.org>

	* Makefile.am (.S.lo): Pass -DPIC. i386, PPC and Sparc code
	require it.  It worked for me because I am using the i586 code.

2002-08-23  Werner Koch  <wk@gnupg.org>

	* Makefile.am (.S.lo): Fixed for libtool build with --disable-shared.

2002-07-24  Werner Koch  <wk@gnupg.org>

	* longlong.h: Replaced all K&R multiline strings by ISO ones for
	the sake of modern compilers.  Suggested by Marco Parrone.

2002-06-24  Werner Koch  <wk@gnupg.org>

	* mpiutil.c (gcry_mpi_swap): New.

	* mpi-div.c (gcry_mpi_div): New.
	(gcry_mpi_mod): New.
	* mpi-inv.c (gcry_mpi_invm): New.

	* mpicoder.c (do_get_buffer): Make sure that we allocate at least
	one byte.

2002-06-12  Werner Koch  <wk@gnupg.org>

	* hppa1.1/udiv-qrnnd.S: Changes for PIC by Randolph Chung.

2002-05-15  Werner Koch  <wk@gnupg.org>

	* config.links: Chnage the way the mpi modules are determined.
	* Makefile.am: Revamped to better handle modules

2002-05-14  Werner Koch  <wk@gnupg.org>

	Changed license of all files to the LGPL.

2002-04-18  Werner Koch  <wk@gnupg.org>

	* mpicoder.c (gcry_mpi_scan): Don't use normalize on a NULL MPI.

2002-03-20  Werner Koch  <wk@gnupg.org>

	* mpicoder.c (mpi_read_from_buffer): Bail out on a zero length
	buffer because we can't eventually do an malloc of this size.
	Reported by Timo.

2002-01-14  Werner Koch  <wk@gnupg.org>

	* mpi-inv.c (_gcry_mpi_invm): Typo fixes, noted by Carlo Perassi.

2001-11-01  Werner Koch  <wk@gnupg.org>

	* mpicoder.c (gcry_mpi_scan): Allow to pass a nbytes as NULL or